--- a/web/app/views/components/_section.html.erb
+++ b/web/app/views/components/_section.html.erb
@@ -10,10 +10,12 @@
 
 %>
 
-<% if collection[:display_if_empty] || (collection[:events] && collection[:events].size > collection[:if_greater_than]) %>
-	<section id="<%= collection[:identifier] %>" class="me-section">
-		<div class="me-section__inner">
-			<%= yield %>
-		</div>
-	</section>
+<% cache([current_user, collection[:identifier], session[:stimulus].to_param, collection[:events].map(&:id), collection[:events].maximum(:updated_at)]) do %>
+	<% if collection[:display_if_empty] || (collection[:events] && collection[:events].size > collection[:if_greater_than]) %>
+		<section id="<%= collection[:identifier] %>" class="me-section">
+			<div class="me-section__inner">
+				<%= yield %>
+			</div>
+		</section>
+	<% end %>
 <% end %>
