--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -16,10 +16,10 @@
 		 style="order: <%= event_counter + 1 %>;">
 	<div class="me-card me-card--feed mdc-card mdc-card--outlined event-<%= event.id %>"
 			 data-action="mouseover->event#showEventDetails"
-			 data-collection-<%= section_identifier %>-flip-key="<%= "#{section_identifier}-#{event_type}-#{dom_id event}" %>"
+			 data-collection-<%= section_identifier %>-flip-key="<%= "#{section_identifier}-#{dom_id event}" %>"
 			 data-controller="event"
 			 data-event-dominant-color="<%= get_image_dominant_color event %>"
-			 data-event-favorited="<%= current_user.taste_events_saved? event.id if current_user %>"
+			 data-event-favorited="<%= user.taste_events_saved? event.id if user %>"
 			 data-event-identifier="<%= event.id %>"
 			 data-event-similar-loading="false"
 			 data-event-similar-open="<%= is_similar_open %>"
@@ -27,18 +27,19 @@
 			 id="<%= "card-#{section_identifier}-#{dom_id event}" %>">
 		<div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event, preload: false %>">
 			<%= image_tag get_feed_image_url(event), loading: :lazy %>
-			<% if current_user %>
+			<% if user %>
 				<div data-controller="save-button"
 						 data-action="click->save-button#like"
 						 data-save-button-resource-name="<%= event.class.name.tableize %>"
+						 data-save-button-resource-selector="<%= "cell-#{section_identifier}-#{dom_id event}" %>"
 						 data-save-button-resource-id="<%= event.id %>"
-						 data-save-button-saved="<%= current_user.taste_events_saved? event.id %>"
+						 data-save-button-saved="<%= user.taste_events_saved? event.id %>"
 						 class="me-card__like-button">
-					<button class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if current_user.taste_events_saved?(event.id) %>"
+					<button class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if user.taste_events_saved?(event.id) %>"
 									data-reflex-permanent
 									data-target="save-button.button event.likeButton"
 									id="add-to-favorites"
-									style="<%= 'display: inline' if current_user.taste_events_saved?(event.id) %>">
+									style="<%= 'display: inline' if user.taste_events_saved?(event.id) %>">
 						<i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">
 							<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M9.99165 15.4562C9.33798 16.0496 8.33168 16.0496 7.67801 15.4476L7.5834 15.3616C3.06793 11.2761 0.117822 8.60127 0.229634 5.26412C0.281239 3.80197 1.02952 2.40003 2.24224 1.57434C4.51288 0.0261801 7.31677 0.748655 8.83053 2.52044C10.3443 0.748655 13.1482 0.0175793 15.4188 1.57434C16.6315 2.40003 17.3798 3.80197 17.4314 5.26412C17.5518 8.60127 14.5931 11.2762 10.0777 15.3788L9.99165 15.4562Z"/>
@@ -132,7 +133,7 @@
 		<%= render partial: 'components/collection/similar',
 							 locals:  {
 									 data: {
-											 user:  current_user,
+											 user:  user,
 											 event: event
 									 }
 							 },
