--- a/web/app/views/components/collection/movies/_collection.html.erb
+++ b/web/app/views/components/collection/movies/_collection.html.erb
@@ -1,39 +1,39 @@
 <%
 
-  raise ArgumentError unless data
+	raise ArgumentError unless data
 
-  data = {
-    collection: {
-      movies: []
-    },
-    title:  {}
-  }.deep_merge!(data)
-
-  props = {
-
-  }.deep_merge!(props || {})
+	data = {
+			user:       nil,
+			collection: {
+					movies: []
+			},
+			title:      {}
+	}.deep_merge!(data)
 
 %>
 
 <div data-controller="movie-collection" class="me-collection" data-model="movie">
-  <div class="me-collection__head">
-    <h2>
-      <%= data[:title][:principal] %>
-    </h2>
-    <div class="me-collection__title-tertiary">
-      <%= data[:title][:tertiary] %>
-    </div>
-  </div>
-  <div class="me-collection" data-section-disposition="horizontal">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner"
-           data-movie-collection-turbolinks-persist-scroll="0"
-           data-target="movie-collection.scrollContainer">
-        <%= render(partial: 'components/collection/movie',
-                   collection: data[:collection][:movies],
-                   as:         :movie,
-                   cached:     true) %>
-      </div>
-    </div>
-  </div>
+	<div class="me-collection__head">
+		<h2>
+			<%= data[:title][:principal] %>
+		</h2>
+		<div class="me-collection__title-tertiary">
+			<%= data[:title][:tertiary] %>
+		</div>
+	</div>
+	<div class="me-collection" data-section-disposition="horizontal">
+		<div class="mdc-layout-grid">
+			<div class="mdc-layout-grid__inner"
+					 data-movie-collection-turbolinks-persist-scroll="0"
+					 data-target="movie-collection.scrollContainer">
+				<%= render(partial:    'components/collection/movie',
+									 collection: data[:collection][:movies],
+									 as:         :movie,
+									 locals:     {
+											 user: data[:user]
+									 },
+									 cached:     true) %>
+			</div>
+		</div>
+	</div>
 </div>
