--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -1,8 +1,8 @@
-<% if current_user and saved_resources.present? %>
+<% if user and saved_resources.present? %>
 	<div id="<%= identifier %>" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
 		<h2 data-target="saves.header" class="me-saves__title">
 			Favoritos
-			<%= link_to user_path current_user do %>
+			<%= link_to user_path user do %>
       <span class="me-see-all is-hoverable">
           Ver tudo
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"/></svg>
@@ -38,6 +38,7 @@
 										 collection: saved_resources,
 										 as:         :movie,
 										 locals:     {
+												 user:       user,
 												 identifier: identifier,
 										 },
 										 cached:     false) %>
@@ -46,6 +47,7 @@
 										 collection: saved_resources,
 										 as:         :event,
 										 locals:     {
+												 user:            user,
 												 identifier:      identifier,
 												 display_name:    false,
 												 display_place:   false,
