No index privacy.htmland terms.html

--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -28,7 +28,7 @@
 		<a class="manifesto" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="noreferrer" target="_blank">
 			Manifesto ·
 		</a>
-		<a href="/privacy">Política de privacidade</a> ·
-		<a href="/terms">Termos de serviço</a>
+		<a rel="nofollow" href="/privacy">Política de privacidade</a> ·
+		<a rel="nofollow" href="/terms">Termos de serviço</a>
 	</div>
 </section>
