--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -24,7 +24,6 @@
   }
   @include desktop-only {
     border: 1px solid $border-color;
-    padding: 12px 0;
     border-radius: 2px
   }
 
@@ -54,19 +53,15 @@
     display: -webkit-box;
     display: flex;
     flex-direction: row;
-    margin: 0 0 12px 0;
     text-transform: uppercase;
     font-size: 11px;
     @include mobile-only {
       display: none;
     }
 
-    & span {
+    & a {
       padding: 0 12px;
-    }
-
-    & i {
-      font-style: normal;
+      font-size: 11px;
     }
   }
 
