--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -44,7 +44,7 @@ $description-color: $font-secondary-color;
   }
 
   .me-saves & {
-    min-height: 132px;
+    min-height: 130px;
     cursor: pointer;
     font-size: 11px;
     border: 0;
@@ -52,7 +52,7 @@ $description-color: $font-secondary-color;
     background-color: inherit;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     @include mobile-only {
-      min-height: 100px;
+      min-height: 90px;
     }
 
     &__title {
@@ -271,7 +271,8 @@ $description-color: $font-secondary-color;
 
   &__secondary-section {
     color: $font-secondary-color;
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 1.4em;
     margin: 6px 0 0 0;
     padding: 0 0 0 6px;
     font-weight: 400;
@@ -319,7 +320,7 @@ $description-color: $font-secondary-color;
   &__tertiary-section {
     color: $font-secondary-color;
     font-size: 14px;
-    margin: 12px 0 0 0;
+    margin: 9px 0 0 0;
     padding: 0 0 0 6px;
     font-weight: 300;
     display: flex;
