--- a/web/app/assets/stylesheets/components/me-see-all.scss
+++ b/web/app/assets/stylesheets/components/me-see-all.scss
@@ -8,7 +8,7 @@
   padding: 3px 6px 3px 8px;
   border-radius: 16px;
   @include mobile-only {
-    background: whitesmoke;
+    //background: whitesmoke;
     font-size: 9px;
   }
 
