--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -83,44 +83,46 @@
 				<%= event.ml_data['categories']['primary'].to_json if Rails.env == 'development' && params[:debug] %>
 			</div>
 		<% end %>
-		<div class="me-card__tertiary-section">
-			<% if display_place %>
-				<%= link_to place_path(event.place) do %>
-					<div class="me-card__place me-chip mdc-chip"
-							 data-target="event.place"
-							 data-action="click->event#handlePlaceClick"
-							 title="<%= event.place_details_name %>">
+		<% if display_place || display_similar %>
+			<div class="me-card__tertiary-section">
+				<% if display_place %>
+					<%= link_to place_path(event.place) do %>
+						<div class="me-card__place me-chip mdc-chip"
+								 data-target="event.place"
+								 data-action="click->event#handlePlaceClick"
+								 title="<%= event.place_details_name %>">
+							<div class="mdc-chip__ripple"></div>
+							<svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M4 0C1.78857 0 0 1.76836 0 3.9548C0 6.31073 2.52571 9.55932 3.56571 10.7966C3.79429 11.0678 4.21143 11.0678 4.44 10.7966C5.47429 9.55932 8 6.31073 8 3.9548C8 1.76836 6.21143 0 4 0ZM4 5.36723C3.21143 5.36723 2.57143 4.73446 2.57143 3.9548C2.57143 3.17514 3.21143 2.54237 4 2.54237C4.78857 2.54237 5.42857 3.17514 5.42857 3.9548C5.42857 4.73446 4.78857 5.36723 4 5.36723Z"/>
+							</svg>
+							<%= limit_place_name_size(event.place_details_name, 12) %>
+						</div>
+					<% end %>
+				<% end %>
+				<% if display_similar && event.similar_data.present? %>
+					<div class="me-card__similar me-chip mdc-chip"
+							 data-action="click->event#showSimilar"
+							 data-target="event.similar"
+							 title="Mostrar eventos parecidos">
 						<div class="mdc-chip__ripple"></div>
-						<svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M4 0C1.78857 0 0 1.76836 0 3.9548C0 6.31073 2.52571 9.55932 3.56571 10.7966C3.79429 11.0678 4.21143 11.0678 4.44 10.7966C5.47429 9.55932 8 6.31073 8 3.9548C8 1.76836 6.21143 0 4 0ZM4 5.36723C3.21143 5.36723 2.57143 4.73446 2.57143 3.9548C2.57143 3.17514 3.21143 2.54237 4 2.54237C4.78857 2.54237 5.42857 3.17514 5.42857 3.9548C5.42857 4.73446 4.78857 5.36723 4 5.36723Z"/>
-						</svg>
-						<%= limit_place_name_size(event.place_details_name, 12) %>
+						Similares
+						<i class="me-card__expand-more material-icons">
+							<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+								<path opacity=".87" fill="none" d="M24 24H0V0h24v24z"/>
+								<path d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"/>
+							</svg>
+						</i>
+						<i class="me-card__loading material-icons">
+							<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+								<path fill="none" d="M0 0h24v24H0V0z"/>
+								<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+							</svg>
+						</i>
+
 					</div>
 				<% end %>
-			<% end %>
-			<% if display_similar && event.similar_data.empty? == false %>
-				<div class="me-card__similar me-chip mdc-chip"
-						 data-action="click->event#showSimilar"
-						 data-target="event.similar"
-						 title="Mostrar eventos parecidos">
-					<div class="mdc-chip__ripple"></div>
-					Similares
-					<i class="me-card__expand-more material-icons">
-						<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
-							<path opacity=".87" fill="none" d="M24 24H0V0h24v24z"/>
-							<path d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"/>
-						</svg>
-					</i>
-					<i class="me-card__loading material-icons">
-						<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
-							<path fill="none" d="M0 0h24v24H0V0z"/>
-							<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-						</svg>
-					</i>
-
-				</div>
-			<% end %>
-		</div>
+			</div>
+		<% end %>
 	</div>
 </div>
 <% if show_similar_to&.last == event.id &&
