--- a/web/app/views/welcome/_invite.html.erb
+++ b/web/app/views/welcome/_invite.html.erb
@@ -61,12 +61,14 @@
   <div class="invite__cta-group">
     <%= link_to new_user_registration_path do %>
       <div class="invite__cta">
-        Criar meu perfil
+				<div class="mdc-button__ripple"></div>
+				Criar meu perfil
       </div>
     <% end %>
     <%= link_to new_user_session_path do %>
       <div class="invite__cta invite__cta--signin">
-        Entrar
+				<div class="mdc-button__ripple"></div>
+				Entrar
       </div>
     <% end %>
   </div>
