--- a/web/app/views/movies/index.html.erb
+++ b/web/app/views/movies/index.html.erb
@@ -7,12 +7,18 @@
 	<% if current_user %>
 		<section class="me-section me-section--condensed">
 			<div class="me-section__inner">
-				<%= render partial: 'feeds/saves',
+				<%= render partial: 'feeds/saves', layout: 'components/stimulus_container',
 									 locals:  {
 											 user:            current_user,
 											 identifier:      'movies_saved',
+											 html:            {
+													 data: {
+															 controller: 'saves',
+															 target:     'saves.saves'
+													 }
+											 },
 											 saved_resources: @movies[:saved],
-											 empty_message:   "Salve filmes com ❤ para vê - los aqui"
+											 empty_message:   'Salve filmes com ❤ para vê - los aqui'
 									 } %>
 			</div>
 		</section>
