--- a/web/app/assets/stylesheets/components/me-tab-indicator.scss
+++ b/web/app/assets/stylesheets/components/me-tab-indicator.scss
@@ -5,7 +5,7 @@
 
       &--underline {
         //@include desktop-only {
-        width: 50px;
+        max-width: 50px;
         //}
       }
     }
